--- a/Projects/Rust/Query/Cargo.toml
+++ b/Projects/Rust/Query/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "guess_the_number"
+name = "query"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8"
 crossterm = "0.28.1"
-colored = "2.0"
-inquire = "0.7.5"
+console = "0.15.10"
+thiserror = "2.0.11"
+tokio = "1.43.0"
